impl http file downloader

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ features = [
     "Win32_System_Variant",
     "Win32_System_Environment",
     "Win32_UI_Shell",
+    "Win32_Networking_WinInet",
 ]
