--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 windows-core = "0.61.0"
 clap = { version = "4.5.37", features = ["derive"] }
-
+base64 = "0.22.1"
 
 [dependencies.windows]
 version = "0.61.1"
