--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,7 @@ features = [
     "Win32_System_Environment",
     "Win32_UI_Shell",
     "Win32_Networking_WinInet",
+    "Win32_System_LibraryLoader",
+    "Win32_System_Memory",
+    "Win32_System_Threading",
 ]
