--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,5 @@ features = [
     "Win32_System_LibraryLoader",
     "Win32_System_Memory",
     "Win32_System_Threading",
+    "Win32_System_Diagnostics_Debug",
 ]
