--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [build]
 target = "x86_64-pc-windows-msvc"
 rustflags = [
-  #"-C", "target-feature=+crt-static"
+  "-C", "target-feature=+crt-static"
 ]
