--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -18,7 +18,13 @@ jobs:
 
       - name: Build
         run: cargo build --release
-
+        
+      - name: Upload build result
+        uses: actions/upload-artifact@v4
+        with:
+          name: exe
+          path: ./target/x86_64-pc-windows-msvc/release/road_loader.exe
+          
       - name: test exec
         run: ./target/x86_64-pc-windows-msvc/release/road_loader.exe -p .\.net4-test-project.exe -- "argument"
 
